# ferrite-llm

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  NEXT_STEPS_AGENT_GOALS.txt  PHASE1_COMPLETE.md  QUICKSTART.md  README.md  RUNNING.md  build.rs  build_spcpp.sh  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/ferrite-cli/: Cargo.toml  README.md
crates/ferrite-cli/src/: main.rs
crates/ferrite-core/: Cargo.toml  README.md  build.rs
crates/ferrite-core/examples/: custom-attention-bench.rs  custom-kernel-smoke.rs  ug-cuda-bench.rs  ug-cuda-smoke.rs
crates/ferrite-core/kernels/: activation_ops.cu  build_kernels.sh  kernel_config.toml
crates/ferrite-core/src/: chat_session.rs  cuda_kernel.rs  hooks.rs  lib.rs  models.rs  sampling.rs  tlsf_alloc.rs  tokenizer.rs  ug_cuda_support.rs
crates/ferrite-core/src/registry/: catalog.rs  loader.rs  mod.rs  spec.rs
crates/ferrite-sdk/: Cargo.toml  README.md
crates/ferrite-sdk/src/: lib.rs
crates/ferrite-wasm-host/: Cargo.toml  README.md
crates/ferrite-wasm-host/src/: adapter.rs  bindings.rs  hooks.rs  host.rs  lib.rs
docs/: ARCHITECTURE.md  ENGINE_IDENTITY.md  INSTALLER_ARCHITECTURE.md  README.md  RUNNING.md  architecture.md  building.md  getting-started.md  index.md  quickstart.md
docs/api/: allocator.md  pipeline.md  runtime.md  stream.md
docs/guides/: memory.md  real-time.md  zero-copy.md
examples/: Cargo.toml  README.md  REFACTORING.md
examples/chatbots/gemma/: gemma_inference.rs
examples/chatbots/llama/: llama_speculative.rs  tinyllama_inference.rs
examples/chatbots/mistral/: mistral_inference.rs  mistral_quantized_inference.rs  mistral_streaming.rs  mistral_stress_test.rs
examples/chatbots/phi/: phi_inference.rs  phi_quantized_inference.rs
examples/chatbots/qwen/: qwen_inference.rs
examples/native/: Cargo.toml
examples/native/chatbots/gemma/: gemma_inference.rs
examples/native/chatbots/llama/: llama_speculative.rs  tinyllama_inference.rs
examples/native/chatbots/mistral/: mistral_inference.rs  mistral_quantized_inference.rs  mistral_quantized_optimized.rs  mistral_streaming.rs  mistral_stress_test.rs  test_flash_attention.rs
examples/native/chatbots/phi/: phi_inference.rs
examples/native/chatbots/qwen/: qwen_inference.rs
examples/native/src/: cli.rs  config.rs  lib.rs  precision.rs  utils.rs
examples/orin-inference/: Cargo.toml
examples/orin-inference/src/: main.rs
examples/script-hooks/: pre_prompt_hook.rhai
examples/src/: lib.rs  models.rs
examples/wasm/hello-inference/: Cargo.toml
examples/wasm/hello-inference/src/: lib.rs
examples/wasm/mistral-inference/: Cargo.toml
examples/wasm/mistral-inference/src/: lib.rs
ferrite-gpu-lang/: Cargo.toml
ferrite-guest/: Cargo.toml
ferrite-guest/src/: lib.rs
ferrite-os/: Cargo.toml  Makefile  README.md
ferrite-os/crates/internal/ptx-daemon/: TUI_STYLE_REVIEW_CHECKLIST.md  TUI_VISUAL_DESIGN_GUIDE.md  dev-config.toml  ferrite-daemon.toml
ferrite-os/crates/internal/ptx-daemon/src/: bootstrap.rs  commands.rs  config.rs
ferrite-os/crates/internal/ptx-daemon/src/server/: bootstrap.rs  command_pipeline.rs
ferrite-os/crates/internal/ptx-daemon/src/tui/commands/: run.rs
ferrite-os/crates/internal/ptx-kernels/: build.rs
ferrite-os/crates/internal/ptx-sys/: Cargo.toml  build.rs
ferrite-os/crates/internal/ptx-sys/src/: lib.rs
ferrite-os/crates/public/ptx-runtime/: Cargo.toml
ferrite-os/native/core/memory/modules/: tlsf_allocator_api.inl
ferrite-os/tooling/benchmarks/: ptx_bench_.txt  ptx_bench_20260207_053958.txt  ptx_bench_20260207_054042.txt  ptx_bench_20260207_054528.txt
ferrite-runtime/: ARCHITECTURE.md  Cargo.toml  README.md
ferrite-runtime/src/: adapter.rs  host.rs  main.rs
installer/: Cargo.toml  README.md
installer/bootstrap/: bootstrap.sh
installer/docs/: model.md
installer/locks/: README.md
installer/manifests/: features.toml  graph.toml  host-tools.toml  products.toml  system.toml
installer/profiles/: ci-builder.toml  cpu-only-dev.toml  jetson-torch.toml  jetson.toml  workstation-full.toml  workstation-nvidia.toml
installer/src/: main.rs
installer/templates/: env.sh.tpl  ferrite-run.tpl
kernels/: flash_attention.cu  kernel_config.toml
kernels/docs/: CUSTOM_KERNELS.md  KERNEL_TEMPLATE.md
kernels/logic/comparison/: equal.cu
kernels/math/activation/: relu.cu
kernels/math/linear/: add.cu  matmul.cu  transpose.cu
scripts/: bench_ug_cuda_tlsf.sh
src/: chat_session.rs  flash_attention.rs  generation.rs  lib.rs  models.rs  sampling.rs  tokenizer.rs
src/compute/: backend.rs  cpu.rs  device.rs  mod.rs  spcpp.rs  stream.rs  synth.rs
src/data/: checkpoint.rs  datasets.rs  mod.rs
src/dynamics/: allocator.rs  mod.rs  muscle_memory.rs
src/lang/: interpreter.rs  mod.rs
src/modules/: math.rs  mod.rs  torch.rs  vision.rs
src/structure/: mod.rs
tests/: test_cuda_kernels.rs
wit/: ferrite.wit
