[workspace]
members = [
    "crates/ferrite-core",
    "crates/ferrite-wasm-host",
    "crates/ferrite-sdk",
    "crates/ferrite-cli",
    "examples/wasm/hello-inference",
    "examples/wasm/mistral-inference",
    "examples/orin-inference",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DaronPopov/ferrite"

# Shared dependencies across workspace
[workspace.dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

# Patch crates-io deps to use ferriterc PTX forks (TLSF O(1) allocator)
[patch.crates-io]
cudarc = { path = "external/cudarc-ptx" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
