[workspace]
members = [
    "crates/ferrite-core",
    "crates/ferrite-wasm-host",
    "crates/ferrite-sdk",
    "crates/ferrite-cli",
    "examples/wasm/hello-inference",
    "examples/wasm/mistral-inference",
    "examples/orin-inference",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.88"
authors = ["DaronPopov"]
repository = "https://github.com/DaronPopov/ferrite"
license = "LicenseRef-Proprietary"

# Shared dependencies across workspace
[workspace.dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
ptx-sys = { path = "ferrite-os/crates/internal/ptx-sys" }
ptx-runtime = { path = "ferrite-os/crates/public/ptx-runtime" }
ptx-compute = { path = "ferrite-os/crates/internal/ptx-compute" }
ptx-tensor = { path = "ferrite-os/crates/internal/ptx-tensor" }
ptx-autograd = { path = "ferrite-os/crates/internal/ptx-autograd" }
ptx-compiler = { path = "ferrite-os/crates/internal/ptx-compiler" }
ptx-kernels = { path = "ferrite-os/crates/internal/ptx-kernels" }
ptx-app = { path = "ferrite-os/crates/public/ptx-app" }
ferrite-platform = { path = "ferrite-os/crates/internal/ferrite-platform" }
ptx-render = { path = "ferrite-os/crates/internal/ptx-render" }
libc = "0.2"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
half = { version = "2.4", features = ["std", "bytemuck"] }
num-traits = "0.2"
smallvec = "1.13"
indexmap = "2.2"
petgraph = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
rand = "0.8"
bytemuck = { version = "1.16", features = ["derive"] }
indicatif = "0.17"
directories = "5"
memmap2 = "0.9"
tempfile = "3"
humansize = "2"

# Patch crates-io deps to use ferriterc PTX forks (TLSF O(1) allocator)
[patch.crates-io]
cudarc = { path = "external/cudarc-ptx" }
gemm-common = { path = "external/gemm-common" }
gemm-common_019 = { package = "gemm-common", path = "external/gemm-common-019" }
cudarc_019 = { package = "cudarc", path = "external/cudarc-ptx-019" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.hello-inference]
opt-level = "z"
