[package]
name = "ferrite-examples"
version = "0.2.0"
edition = "2021"
description = "Ferrite Inference Platform - LLM chatbots powered by Candle"

[lib]
path = "src/lib.rs"

[features]
default = []
flash-attn = ["candle-transformers/flash-attn"]

[dependencies]
# Ferrite v2 - Candle companion library
ferrite = { path = ".." }

# Candle - Pure Rust ML (with CUDA support)
candle-core = { version = "0.8", features = ["cuda"] }
candle-nn = { version = "0.8", features = ["cuda"] }
candle-transformers = { version = "0.8", features = ["cuda"] }

# Tokenization & utilities
llm-tokenizer = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "6.0"

# ============================================================================
# CLI Launcher
# ============================================================================

[[bin]]
name = "ferrite-chat"
path = "src/bin/ferrite-chat.rs"

# ============================================================================
# Chatbots - Llama Family
# ============================================================================

[[bin]]
name = "tinyllama_inference"
path = "chatbots/llama/tinyllama_inference.rs"

# ============================================================================
# Chatbots - Mistral Family
# ============================================================================

[[bin]]
name = "mistral_inference"
path = "chatbots/mistral/mistral_inference.rs"

[[bin]]
name = "mistral_quantized_inference"
path = "chatbots/mistral/mistral_quantized_inference.rs"

[[bin]]
name = "mistral_streaming"
path = "chatbots/mistral/mistral_streaming.rs"

# ============================================================================
# Chatbots - Qwen Family
# ============================================================================

[[bin]]
name = "qwen_inference"
path = "chatbots/qwen/qwen_inference.rs"

# ============================================================================
# Chatbots - Gemma Family
# ============================================================================

[[bin]]
name = "gemma_inference"
path = "chatbots/gemma/gemma_inference.rs"

# ============================================================================
# Chatbots - Phi Family
# ============================================================================

[[bin]]
name = "phi_inference"
path = "chatbots/phi/phi_inference.rs"

[[bin]]
name = "phi_quantized_inference"
path = "chatbots/phi/phi_quantized_inference.rs"
