[package]
name = "ferrite-guest"
version = "0.1.0"
edition = "2021"
description = "Guest SDK for writing ferrite WASM modules in Rust"
license = "MIT"

[lib]
crate-type = ["lib"]

[dependencies]
# WIT bindings for guest modules
wit-bindgen = { version = "0.37", default-features = false, features = ["macros"] }

