[package]
name = "ferrite-runtime"
version = "0.1.0"
edition = "2021"
description = "WASM runtime host for neural inference"
license = "MIT"

[[bin]]
name = "ferrite-rt"
path = "src/main.rs"

[dependencies]
# Core ferrite engine
ferrite = { path = "..", features = ["cuda"] }

# Candle for real inference
candle-core = "0.8"
candle-transformers = "0.8"

# Model downloading
hf-hub = "0.4"
dirs = "5.0"

# WASM runtime with component model
wasmtime = { version = "27", features = ["component-model", "cranelift"] }
wasmtime-wasi = "27"

# WIT bindings generation
wit-bindgen = "0.37"

# Utilities
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
