[package]
name = "ferrite-cli"
version = "0.3.0"
edition = "2021"
description = "Ferrite CLI - Standalone WASM runtime for neural inference"
license = "MIT"
repository = "https://github.com/DaronPopov/ferrite"
homepage = "https://github.com/DaronPopov/ferrite"
keywords = ["cli", "wasm", "inference", "runtime"]
categories = ["command-line-utilities"]
default-run = "ferrite-rt"

[[bin]]
name = "ferrite-rt"
path = "src/main.rs"

[[bin]]
name = "ferrite-rt-runner"
path = "src/bin/ferrite-rt-runner.rs"
required-features = ["runtime"]

[dependencies]
# Ferrite host library
ferrite-wasm-host = { path = "../ferrite-wasm-host", optional = true }

# CLI
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5.0"
walkdir = "2.5"

# WASM runtime
wasmtime = { version = "27", features = ["component-model", "cranelift"], optional = true }
wasmtime-wasi = { version = "27", optional = true }

[features]
runtime = ["dep:ferrite-wasm-host", "dep:wasmtime", "dep:wasmtime-wasi"]
cuda = ["runtime", "ferrite-wasm-host/cuda"]
tlsf-alloc = ["cuda", "ferrite-wasm-host/tlsf-alloc"]
default = []

[dev-dependencies]
tempfile = "3"
