[package]
name = "ferrite-wasm-host"
version = "0.3.0"
edition = "2021"
description = "WASM host library for neural inference - Embed AI in any Rust app"
license = "MIT"
repository = "https://github.com/DaronPopov/ferrite"
keywords = ["wasm", "inference", "neural", "llm", "component-model"]
categories = ["wasm", "science"]

[lib]
name = "ferrite_wasm_host"
path = "src/lib.rs"

[dependencies]
# Core ferrite engine
ferrite-core = { path = "../ferrite-core", default-features = false }
ferrite-gpu-lang = { path = "../../ferrite-gpu-lang" }
rhai = "1.20"

# Candle for real inference
candle-core = "0.8"
candle-transformers = "0.8"
mistralrs = { version = "0.7", default-features = false }
cudarc-mistral = { package = "cudarc", version = "0.19.3", optional = true, default-features = false }

# Model downloading
hf-hub = "0.4"
dirs = "5.0"
tokio = { version = "1", features = ["rt", "time"] }

# WASM runtime with component model
wasmtime = { version = "27", features = ["component-model", "cranelift"] }
wasmtime-wasi = "27"

# WIT bindings
wit-bindgen = "0.37"

# Utilities
anyhow = "1.0"
tracing = "0.1"

[features]
cuda = ["ferrite-core/cuda", "mistralrs/cuda"]
tlsf-alloc = ["ferrite-core/tlsf-alloc", "cuda", "cudarc-mistral/ptx-alloc"]
default = ["cuda"]
