[package]
name = "ptx-runtime"
version = "0.1.0"
edition = "2021"
authors = ["PTX-OS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/DaronPopov/ferriterc"
description = "Safe Rust wrappers for PTX-OS GPU runtime"

[dependencies]
ptx-sys = { path = "../../internal/ptx-sys" }
libc = "0.2"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
gpu-tests = []  # Enable GPU-requiring tests
